# uie_pytorch

./: README.md  pyproject.toml  wrapper.dev.md
annotation/: convert_doccano.py  convert_format.py  labels2doccano.py  utils.py
quick_start/: run_convert.py  run_export.py  run_finetune.py  run_predict.py
src/: __init__.py  _model_dict.py  convert.py  evaluate.py  export_model.py  finetune.py  predictor.py  set_logger.py
src/models/: __init__.py  backend.py  tokenizer.py  uie.py  utils.py
tests/: _helper.py  test_convert.py  test_export.py  test_predict.py
